replication fixes and compound effect callbacks

--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -1,1 +1,4 @@
-исправить то что не работают OnStart OnServer как-то придумать надо чтоб работала эта фигня тупая
+FIXED-- исправить то что не работают OnStart OnServer как-то придумать надо чтоб работала эта фигня тупая --FIXED
+
+Сделать репликацию статус-эффектов
+Доработать все случаи статус эффектов. К примеру если наложить статус два раза, то они будут себя странно вести
