--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -1,4 +1,6 @@
 FIXED-- исправить то что не работают OnStart OnServer как-то придумать надо чтоб работала эта фигня тупая --FIXED
 
-Сделать репликацию статус-эффектов
+DONE-- Сделать репликацию статус-эффектов --DONE
 Доработать все случаи статус эффектов. К примеру если наложить статус два раза, то они будут себя странно вести
+сделать _handle_callback ф-цию
+сделать Passive Class
