--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -4,3 +4,4 @@ FIXED-- исправить то что не работают OnStart OnServer к
 Доработать все случаи статус эффектов. К примеру если наложить статус два раза, то они будут себя странно вести
 сделать _handle_callback ф-цию
 сделать Passive Class
+предусмотреть смерть класса character
