--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -1,8 +1,5 @@
 FIXED-- исправить то что не работают OnStart OnServer как-то придумать надо чтоб работала эта фигня тупая --FIXED
 
-Сделать репликацию статуса компоунд-эффектов Я ХЗ КАК ЁМаё
-Доработать все случаи статус эффектов. К примеру если наложить статус два раза, то они будут себя странно вести
-сделать _handle_callback ф-цию
+сделать Stackable эффекты
 сделать Passive Class
-damage and damage middleware
 предусмотреть смерть класса character
