--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -1,1 +1,2 @@
 исрпавить thread в compound_effects, OnStart может вызываться два раза если не yields.
+подумать на счёт получение конструкторов эффектов
