--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -1,2 +1,3 @@
 исрпавить thread в compound_effects, OnStart может вызываться два раза если не yields.
-подумать на счёт получение конструкторов эффектов
+при измении state CompoundEffectа изменения будут реплицироваться клиенту
+подумать на счёт получение конструкторов эффектов +- done
