alot fixes and still alot bugs

--- a/src/shared/tver/TODO.txt
+++ b/src/shared/tver/TODO.txt
@@ -5,3 +5,10 @@
 Passive class
 Skill class
 Damage class
+
+Как будут работать скиллы и пассивки ааа
+
+может быть будут:
+ CompoundEffect и LinkedCompoundEffect
+ CompoundEffect - Накладывается на нескольких
+ LinkedCompoundEffect - Привязан к одному
